syntax = "proto3";

package eds;

option go_package = "github.com/cfif1982/eds/pkg/grpc;edsv1";

service EDS{
  rpc AddNewDocument (AddNewDocumentRequest) returns (AddNewDocumentResponse);
  rpc GetDocumentByID (GetDocumentByIDRequest) returns (GetDocumentByIDResponse);
  rpc SendDocument (SendDocumentRequest) returns (SendDocumentResponse);
  rpc SignDocument (SignDocumentRequest) returns (SignDocumentResponse);
}

message AddNewDocumentRequest{
  string creator_email = 1;
} 

message AddNewDocumentResponse{
  string qr_code = 1;
} 

message SendDocumentRequest{
  string document_id = 1;
  repeated string signers_mail = 2;
  repeated string files_url = 3;
} 

message SendDocumentResponse{
}

message GetDocumentByIDRequest{
  string document_id = 1;
} 

message GetDocumentByIDResponse{
  string document_id = 1;
  User creator = 2;
  repeated User signers = 3;
  repeated string files_url = 4;
} 

message SignDocumentRequest{
  string document_id = 1;
  string signer_mail = 2;
  string signature_file_url = 3;
} 

message SignDocumentResponse{
}

message User{
  string user_id = 1;
  string user_email = 2;
  string user_name = 3;
}